unpackaged/main/default/objects/LeadVelocifyIdSettings__c/LeadVelocifyIdSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Velocify Id Settings</label>
</CustomObject>