unpackaged/main/default/objects/LeadVelocifyIdSettings__c/fields/CurrentSequence__c.field-meta.xml
<CustomField>
    <fullName>CurrentSequence__c</fullName>
    <externalId>true</externalId>
    <label>Current Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>