unpackaged/main/default/objects/LeadVelocifyIdSettings__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>