unpackaged/main/default/objects/LeadVelocifyIdSettings__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>LastUpdated</label>
    <type>DateTime</type>
</CustomField>